<resources>
    <string name="app_name">GithubUserApp:</string>
    <string name="example_user">NamaUser:</string>
    <string name="following">following:</string>
    <string name="follower">follower:</string>
    <string name="repo">total repository:</string>
    <string name="location">lokasi:</string>
    <string name="company">perusahaan:</string>
    <string name="name">nama:</string>
    <string name="username">username:</string>

    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Cari</string>
    <string name="menu_1">Menu1</string>
    <string name="menu_2">Ganti Bahasa</string>

    <string name="search_hint">Masukkan kata</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>

    <string name="progress">Memuat…</string>
    <string name="user_pilih">kamu memilih user</string>

    <string name="ContentTittleNotif">Cek Applikasi</string>\
    <string name="SubTextNotif">list dari github users</string>
    <string name="menu_reminder_detail">Notifikasi tiap jam 9 pagi</string>
    <string name="notification_reminder">Notifikasi pengingat</string>
    <string name="con_bar">Pengingat jalan app</string>
    <string name="active">Notifikasi Aktif</string>
    <string name="deactive">Notifikasi Non-Aktif</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
