<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item android:id="@+id/menu2"
            android:title="@string/menu_2" />
        <item
            android:id="@+id/remainder"
            android:title="@string/con_bar"
            app:showAsAction="never"/>
        <item
            android:id="@+id/search"
            android:icon="@drawable/baseline_person_search_black_18dp"
            android:title="@string/search"
            app:actionViewClass="android.widget.SearchView"
            app:showAsAction="collapseActionView|always"
            />
        <item
            android:id="@+id/fav"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="favourite"
            app:showAsAction="collapseActionView|always"
            />
    </group>
</menu>